# chem_standard

./: .gitattributes  .gitignore  README.md  convert_to_package.ps1  convert_to_package_fix.ps1  convert_to_package_fix2.ps1  pyproject.toml  repo_cleanup_and_verify.ps1  setup.cfg
core__DEPRECATED/: reaction.py
data/: reactions.jsonl  reactions_index.txt
docs/: canonical_key.md  canonical_stability.md
examples/: api_reaction.py  demo_load.py  demo_reaction.py
examples/data/: reactions.jsonl
package_move_backup/: dest.__init__.py.bak
src/: atom.py  molecule.py  reaction.py
src/chem_standard/: __init__.py  molecule.py
src/chem_standard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/chem_standard/graph/: reaction_graph.py  (+1 more)
src/dataset/: reaction_dataset.py
src/graph/: reaction_graph.py  species_graph.py
src/identity/: reaction_identity.py
src/io/: api_adapter.py  api_schema.py  rdkit_adapter.py  reaction_index.py  verify_canonical_key.py  verify_canonical_representative.py  verify_reaction_dataset.py  verify_reaction_dataset_api.py  verify_reaction_equality.py  verify_reaction_graph.py  verify_reaction_index.py  verify_reaction_path_finder.py  verify_reaction_rule.py  verify_rule_filtered_paths.py  verify_rule_minimal.py  verify_species_graph.py
src/path/: reaction_path_finder.py
src/rules/: allow_all_rule.py  basic_rules.py  composite_rule.py  depth_limit_rule.py  reaction_rule.py  reaction_rule_composition.py
src/signature/: reaction_signature.py
tests/: conftest.py  test_api_adapter.py  test_atom.py  test_molecule.py  test_reaction.py
(+16 files in other folders)
