[metadata]
name = chem_standard
version = 0.1.0
description = chem_standard 鈥?atomic/reaction standardization and tools
author = Zhang Da
author_email = zhangda@users.noreply.github.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
