[metadata]
name = chem_standard
version = 0.1.0
description = chem_standard 鈥?atomic/reaction standardization and tools
long_description = file: README.md
long_description_content_type = text/markdown
author = Zhang Da
author_email = zhangda@users.noreply.github.com
license = MIT

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10

[options.packages.find]
where = src